fix:layout issue with firefox

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -262,3 +262,14 @@
   }
   
   }
+
+  :host {
+    @supports (-moz-appearance: none) {
+      /* Firefox! */
+      .aboutMeTextBoxTwo img,
+      .aboutMeTextBoxThree img {
+        width: 50px;
+        height: auto;
+      }}}
+
+      
